[gd_scene load_steps=4 format=3 uid="uid://du0yh6kapw386"]

[ext_resource type="Script" path="res://Scenes/SettingsMenu.gd" id="1_1pkla"]
[ext_resource type="Theme" uid="uid://bgqmjm172gald" path="res://FontArtistic.tres" id="2_8ojid"]
[ext_resource type="AudioStream" uid="uid://cctgma7w3r7xe" path="res://sunrise_over_water.mp3" id="3_fvun2"]

[node name="SettingsMenu" type="Node2D"]
script = ExtResource("1_1pkla")

[node name="Master" type="HSlider" parent="."]
offset_left = 596.0
offset_top = 119.0
offset_right = 1038.0
offset_bottom = 135.0

[node name="SFX" type="HSlider" parent="."]
offset_left = 595.0
offset_top = 171.0
offset_right = 1037.0
offset_bottom = 187.0

[node name="Music" type="HSlider" parent="."]
offset_left = 598.0
offset_top = 228.0
offset_right = 1040.0
offset_bottom = 244.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 432.0
offset_top = 98.0
offset_right = 571.0
offset_bottom = 158.0
theme = ExtResource("2_8ojid")
text = "Master"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 506.0
offset_top = 155.0
offset_right = 573.0
offset_bottom = 215.0
theme = ExtResource("2_8ojid")
text = "SFX"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
offset_left = 461.0
offset_top = 209.0
offset_right = 581.0
offset_bottom = 269.0
theme = ExtResource("2_8ojid")
text = "Music"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_fvun2")
autoplay = true
bus = &"Music"

[node name="Button" type="Button" parent="."]
offset_left = 382.0
offset_top = 422.0
offset_right = 700.0
offset_bottom = 565.0
theme = ExtResource("2_8ojid")
text = "Back"

[connection signal="value_changed" from="Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="SFX" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="Music" to="." method="_on_music_value_changed"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
